styles/tools.css
textarea::placeholder, textarea {
    color: #6c757d;
    font-size: 1rem;
    font-family: 'Poppins', sans-serif;
}

.ai_tool_container {
	display: flex;
	justify-content: space-evenly;
	height: calc(100vh - 100.8px);
	align-items: center;
}

.user_input {
	width: calc(50vw - 90px);
	height: calc(100vh - 100.8px - 120px);
	display: flex;
	flex-direction: column;
	justify-content: space-between;
}

.submitBtn {
	display: flex;
	background-color: #c6b6fc;
	color: white;
	padding: 12px 24px;
	border-radius: 8px;
	text-decoration: none;
	font-weight: 500;
	justify-content: center;
	transition: background-color 0.3s ease;
	cursor: pointer;
}

.chat_history {
	width: calc(50vw - 90px);
	height: calc(100vh - 100.8px - 120px);
	border-radius: 8px;
	background-color: #f7f8fc;
	border: 1px solid #c6b6fc;
	display: flex;
	justify-content: start;
	flex-direction: column;
	overflow-y: auto;
	padding-top: 25px;
}

.loadingImage {
	width: 100%;
	height: calc(100% - 25px);
	display: flex;
	justify-content: center;
	align-items: center;
	font-size: 100px;
	color: #ded7fc;
}

.message, .ai, .user {
	display: flex; 
	width: 100%; 
	padding: 0px 25px 25px 25px;
}

.pfp {
	display: flex;
	justify-content: center;
	margin-right: 25px;
	width: 50px;
}

.pfp i {
	color: #c6b6fc;
}

.smallInput {
    min-width: 100%;
    background-color: #f7f8fc;
    border-radius: 8px;
    border: none;
    height: 49.6px;
    padding: 0 25px;
    box-sizing: border-box;
    color: #6c757d;
    font-size: 1rem;
    border: 1px solid #c6b6fc;
    -webkit-appearance: none; 
    -moz-appearance: none;
    appearance: none;
}

.largeInput {
    min-width: 100%;
    background-color: #f7f8fc;
    border-radius: 8px;
    border: none;
    min-height: calc(100% - 49.6px - 49.6px - 49.6px - 160px);
    resize: none;
    padding: 25px; 
    box-sizing: border-box; 
    color: #6c757d;
    font-size: 1rem;
    border: 1px solid #c6b6fc;
}

.smallInput:focus, .largeInput:focus {
    outline: none !important;
}

.inputLabel {
    color: #6c757d;
    font-size: 1rem;
    font-family: 'Poppins', sans-serif;
    margin-bottom: 5px;
}

